--- a/the-coopers-inn/linux/builder-rust.hm.yml
+++ b/the-coopers-inn/linux/builder-rust.hm.yml
@@ -1,5 +1,5 @@
 ---
-name: Builder-PHP
+name: Builder-Rust
 
 on:
   workflow_dispatch:
@@ -23,20 +23,12 @@ jobs:
       with:
         ref: "${{ inputs.ref }}"
 
-    - name: Set env name tech
+    - name: Import env
+      env:
+        env_json: "${{ inputs.env_json }}"
       run: |
-        echo '${{ inputs.env }}' | jq -r 'to_entries[]|"\(.key)=\(.value)"' >> "$GITHUB_ENV"
-        builder_name="${GITHUB_WORKFLOW%.hm.yml}"
-        {
-          echo "BUILDER=$builder_name"
-          echo "TECH=${builder_name#*-}"
-        } >> "$GITHUB_ENV"
-
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: "${{ env.PHP_VERSION || '8.2' }}"
-        tools: composer
+        set -euo pipefail
+        echo "$env_json" | jq -r 'to_entries[]|"\(.key)=\(.value)"' >> "$GITHUB_ENV"
 
     - name: Pre-build hooks
       working-directory: "${{ inputs.pipeline }}"
@@ -44,26 +36,18 @@ jobs:
         set -euo pipefail
         find "$HARBOUR"/hooks/10-pre-build.d hooks/10-pre-build.d -type f -perm -u+x -execdir sh -c '"$0"' {} \; 2>/dev/null || true
 
-    - name: Select composer binary
-      run: echo "COMPOSER_BIN=beethoven.sh" >> "$GITHUB_ENV"
-      if: contains(env.files, 'beethoven.sh')
-
-    - name: composer install
-      env:
-        COMPOSER_BIN: "${{ env.COMPOSER_BIN || 'composer' }}"
+    - name: cargo build
       working-directory: "${{ inputs.pipeline }}"
       run: |
         set -euo pipefail
-        "$COMPOSER_BIN" install --no-interaction --no-progress
+        cargo build --locked --release
 
-    - name: composer test
+    - name: cargo test
       if: env.BUILD_TEST_SKIP != 'true'
-      env:
-        COMPOSER_BIN: "${{ env.COMPOSER_BIN || 'composer' }}"
       working-directory: "${{ inputs.pipeline }}"
       run: |
         set -euo pipefail
-        "$COMPOSER_BIN" test || true
+        cargo test --locked --all --all-features || true
 
     - name: Post-build hooks
       working-directory: "${{ inputs.pipeline }}"
