--- a/the-coopers-inn/linux/builder-gradle.hm.yml
+++ b/the-coopers-inn/linux/builder-gradle.hm.yml
@@ -45,6 +45,7 @@ jobs:
         popd >/devnull
 
     - name: Gradle test
+      if: env.BUILD_TEST_SKIP != 'true'
       run: |
         set -euo pipefail
         pushd "${{ inputs.pipeline }}" >/dev/null
