--- a/the-coopers-inn/linux/builder-buildah.hm.yml
+++ b/the-coopers-inn/linux/builder-buildah.hm.yml
@@ -1,3 +1,4 @@
+#BUILD files=/Containerfile/
 ---
 name: Builder-Buildah
 
@@ -66,4 +67,3 @@ jobs:
         pipeline: "${{ inputs.pipeline }}"
         ref: "${{ inputs.ref }}"
         env_json: "${{ env.env_json }}"
-
