--- a/the-coopers-inn/linux/builder-go.hm.yml
+++ b/the-coopers-inn/linux/builder-go.hm.yml
@@ -1,3 +1,4 @@
+#BUILD files=/go\.mod/
 ---
 name: Builder-Go
 
@@ -73,4 +74,3 @@ jobs:
         pipeline: "${{ inputs.pipeline }}"
         ref: "${{ inputs.ref }}"
         env_json: "${{ env.env_json }}"
-
