--- a/the-coopers-inn/linux/builder-gradle.hm.yml
+++ b/the-coopers-inn/linux/builder-gradle.hm.yml
@@ -1,3 +1,4 @@
+#BUILD files=/(build\.gradle|gradlew)/
 ---
 name: Builder-Gradle
 
@@ -71,4 +72,3 @@ jobs:
         pipeline: "${{ inputs.pipeline }}"
         ref: "${{ inputs.ref }}"
         env_json: "${{ env.env_json }}"
-
