--- a/the-coopers-inn/linux/builder-maven.hm.yml
+++ b/the-coopers-inn/linux/builder-maven.hm.yml
@@ -1,3 +1,4 @@
+#BUILD files=/pom\.xml/
 ---
 name: Builder-Maven
 
@@ -71,4 +72,3 @@ jobs:
         pipeline: "${{ inputs.pipeline }}"
         ref: "${{ inputs.ref }}"
         env_json: "${{ env.env_json }}"
-
