--- a/the-coopers-inn/linux/builder-mise.hm.yml
+++ b/the-coopers-inn/linux/builder-mise.hm.yml
@@ -1,3 +1,4 @@
+#BUILD files=/mise\.toml/
 ---
 name: Builder-Mise
 
@@ -67,4 +68,3 @@ jobs:
         pipeline: "${{ inputs.pipeline }}"
         ref: "${{ inputs.ref }}"
         env_json: "${{ env.env_json }}"
-
