--- a/the-coopers-inn/linux/builder-node.hm.yml
+++ b/the-coopers-inn/linux/builder-node.hm.yml
@@ -1,3 +1,4 @@
+#BUILD files=/package\.json/
 ---
 name: Builder-Node
 
@@ -71,4 +72,3 @@ jobs:
         pipeline: "${{ inputs.pipeline }}"
         ref: "${{ inputs.ref }}"
         env_json: "${{ env.env_json }}"
-
