--- a/the-coopers-inn/linux/builder-php.hm.yml
+++ b/the-coopers-inn/linux/builder-php.hm.yml
@@ -1,3 +1,4 @@
+#BUILD files=/composer\.json/
 ---
 name: Builder-PHP
 
@@ -84,4 +85,3 @@ jobs:
         pipeline: "${{ inputs.pipeline }}"
         ref: "${{ inputs.ref }}"
         env_json: "${{ env.env_json }}"
-
