--- a/the-coopers-inn/linux/builder-rust.hm.yml
+++ b/the-coopers-inn/linux/builder-rust.hm.yml
@@ -1,3 +1,4 @@
+#BUILD files=/Cargo\.toml/
 ---
 name: Builder-Rust
 
@@ -68,4 +69,3 @@ jobs:
         pipeline: "${{ inputs.pipeline }}"
         ref: "${{ inputs.ref }}"
         env_json: "${{ env.env_json }}"
-
